# kilight-hass

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/: __init__.py
custom_components/kilight/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  enum.py  exceptions.py  light.py  manifest.json  models.py  sensor.py  strings.json  types.py
custom_components/kilight/translations/: en.json
scripts/: create-release.sh
tests/: __init__.py  conftest.py  test_config_flow.py
