[project]
name = "kilight-hass"
version = "0.1.8"
license = "GPL-3.0-or-later"
authors = [
    {name = "Patrick Lavigne", email = "me@patrick.codes"},
]
description = "Home Assistant integration for connecting to KiLight devices."
requires-python = ">= 3.12"
classifiers = [
    "Topic :: Home Automation",
    "Development Status :: 2 - Pre-Alpha"
]
readme = "README.md"

[project.urls]
repository = "https://github.com/ErraticTech/kilight-hass"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-rxf -l --cov=custom_components --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:It is recommended to use web.AppKey instances for keys"
]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
norecursedirs = [
    ".git",
]

[tool.coverage.run]
source = [
    "custom_components"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == '__main__':",
    "main()"
 ]
show_missing = true

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "custom_components",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.ruff]
fix = true
line-length = 100
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
    "ANN401" # any-type (incompatible with Home Assistant Core methods)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "custom_components",
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "ARG001"
]

[tool.codespell]
quiet-level = 2
ignore-words-list = [
    "hass",
    "hacs"
]

[tool.bumpversion]
commit = true
tag = false
sign_tags = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "# kilight-hass v{current_version}"
replace = "# kilight-hass v{new_version}"

[[tool.bumpversion.files]]
filename = "custom_components/kilight/manifest.json"
search = '"version": "{current_version}",'
replace = '"version": "{new_version}",'
